--- a/Проект6.vcxproj
+++ b/Проект6.vcxproj
@@ -150,6 +150,10 @@
     <ClInclude Include="outputElement.h" />
     <ClInclude Include="outputFish.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="input.txt" />
+    <Text Include="output.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
