--- a/Проект6.vcxproj.filters
+++ b/Проект6.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="delete.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="nameLenght.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="addElement.h">
@@ -99,6 +102,9 @@
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
     <ClInclude Include="outputElement.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="nameLenght.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
   </ItemGroup>
