--- a/Проект6.vcxproj
+++ b/Проект6.vcxproj
@@ -122,6 +122,7 @@
     <ClCompile Include="addElement.cpp" />
     <ClCompile Include="Client.cpp" />
     <ClCompile Include="delete.cpp" />
+    <ClCompile Include="ignoreOutput.cpp" />
     <ClCompile Include="Init.cpp" />
     <ClCompile Include="inputBird.cpp" />
     <ClCompile Include="InputContainer.cpp" />
@@ -140,6 +141,7 @@
     <ClInclude Include="Element.h" />
     <ClInclude Include="Head.h" />
     <ClInclude Include="Fish.h" />
+    <ClInclude Include="ignoreOutput.h" />
     <ClInclude Include="Init.h" />
     <ClInclude Include="InputContainer.h" />
     <ClInclude Include="inputElement.h" />
